manifests/namespaces.yaml
# manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-wiki
---
apiVersion: v1
kind: Namespace
metadata:
  name: kagent
